# pymiette

./: .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: pre-commit.yaml  release-please.yml
src/pyagnostics/: _test.py  exceptions.py  protocols.py  report.py  severity.py  source.py  spans.py
