[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyagnostics"
version = "2.0.0"
description = ""
authors = ["RISQ Capital <dev@risqcapital.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pyagnostics", from = "src" }]
classifiers = []
keywords = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/risqcapital/pyagnostics/issues"
Repository = "https://github.com/risqcapital/pyagnostics"

[tool.poetry.dependencies]
python = ">= 3.11, < 4"
rich = ">= 13, < 14"


[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "W",  # pyflakes warnings
    "I", # isort
    "N", # pep8 naming
    "UP", # pyupgrade
    "ANN", # flake8 annotations
    "ERA", # eradicate
    "PL", # pylint
    "TRY", # tryceratops
    "RUF", # ruf,
    "FA102" # future-required-type-annotation
]

extend-ignore = [
    "TRY003"
]